[project]
name = "logginganalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "zatomis",email = "zatomis@list.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "terminaltables (>=3.1.10,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
