[project]
name = "logginganalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "zatomis",email = "zatomis@list.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "terminaltables (>=3.1.10,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "ruff (>=0.11.7,<0.12.0)",
    "pyright (>=1.1.400,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
